--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="baidu-site-verification" content="codeva-KLHMw5vGRp" />
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>服装制版 - CAD制版</title>
+<title>服装CAD制版</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <link rel="icon" type="image/png" href="images/favicon.png">
 <meta name="description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！www.foooz.link ">
@@ -32,7 +32,7 @@
 <!-- 导航部分 -->
 <div class="header">
   <div class="navbar">
-    <div class="logo"> <img src="images/opo.svg" alt="Logo"width="40" height="40"> <span class="logo-text">服装技术论坛</span> </div>
+    <div class="logo"> <img src="images/opo.svg" alt="Logo"width="40" height="40"> <span class="logo-text">服装CAD制版</span> </div>
     <div class="menu-icon" onclick="toggleNav()">
       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
         <path d="M1 4.5A1.5 1.5 0 0 1 2.5 3h11A1.5 1.5 0 0 1 15 4.5h-14zm0 5A1.5 1.5 0 0 1 2.5 8h11A1.5 1.5 0 0 1 15 9.5h-14zm0 5A1.5 1.5 0 0 1 2.5 13h11A1.5 1.5 0 0 1 15 14.5h-14z"/>
