--- a/fuwu.html
+++ b/fuwu.html
@@ -68,33 +68,52 @@
 <div class="content">
   <div class="vogana01"> </div>
   <div class="vogana02">
-    <ul>
-      精湛工艺，时尚呈现：探索服装技术与制版的奇妙世界
-    </ul>
-    <br>
-    <ul>
-      在时尚的大舞台上，每一件华美的服装都蕴藏着无数的工艺和智慧。欢迎来到我们的服装技术与制版服务，让您的设计变为现实，让每一处细节都闪耀着匠心与创意。
-    </ul>
-    <br>
-    <ul>
-      我们的服务
-    </ul>
-    <li>定制化制版： 无论您是刚起步的设计师还是经验丰富的品牌，我们为您提供专业的定制化制版服务。精准的量身裁剪，确保每一款服装都符合您的设计愿景。</li>
-    <li>数字化工艺： 我们采用先进的数字化技术，将您的设计从纸上呈现到虚拟世界，确保每一处细节都得到精准呈现，提升效率，减少误差。</li>
-    <li>创新材料咨询： 时尚的发展日新月异，材料选择至关重要。我们的专业团队将为您提供关于最新创新材料的建议，帮助您在设计中融入独特的元素。</li>
-    <li>工艺优化： 无论是缝制工艺还是装饰细节，我们将倾听您的需求，提供专业建议，以确保每一款服装都达到完美的制作标准。</li>
-    <li>培训与知识分享： 我们不仅仅是一个服务提供商，更是一个知识的源泉。通过定期的培训和工作坊，我们将与您分享最新的服装技术和制版趋势。</li>
-    <br>
-    <ul>
-      为什么选择我们：
-    </ul>
-    <li>专业团队： 我们拥有经验丰富的服装技术专家和制版师，为您的设计保驾护航。</li>
-    <li>创新技术： 我们紧跟时代步伐，采用先进的数字化技术和创新工艺，确保每一件服装都是独一无二的杰作。</li>
-    <li>贴心服务： 我们以客户为中心，倾听您的需求，提供量身定制的解决方案，确保您的设计得到最佳呈现。</li>
-    <br>
-    <ul>
-      无论您是寻找个人定制制版，还是需要全面的服装技术支持，我们都将竭诚为您服务。让我们一同走进时尚的创新世界，创造令人惊叹的时尚之作！
-    </ul>
+        <section class="services-detail">
+        <h1>我们的服务</h1>
+        <p>我们为服装设计品牌提供全面的CAD制版和相关服务，确保每一件成品都符合市场需求并且完美呈现。</p>
+        
+        <!-- 服务项 1 -->
+        <div class="service-item">
+            <h2>1. 服装CAD制版服务</h2>
+            <p>我们通过数字化技术精确制作服装版型，确保每一款服装设计符合人体工程学、穿着舒适、合身度高，助力您打造出市场上最受欢迎的款式。</p>
+        </div>
+
+        <!-- 服务项 2 -->
+        <div class="service-item">
+            <h2>2. 服装样衣制作</h2>
+            <p>根据CAD制版文件，我们为您提供高质量的样衣制作服务，确保设计的版型与成衣效果一致。在样衣制作过程中，我们提供修改与优化服务，确保款式完美。</p>
+        </div>
+
+        <!-- 服务项 3 -->
+        <div class="service-item">
+            <h2>3. 服装技术包制作</h2>
+            <p>我们提供完整的服装技术包，包含面料、辅料、工艺要求等详细信息，为生产方提供准确指导，确保大货生产不出错。</p>
+        </div>
+
+        <!-- 服务项 4 -->
+        <div class="service-item">
+            <h2>4. 服装版型修改与调整</h2>
+            <p>根据市场反馈或客户需求，我们灵活地对服装版型进行调整与优化，帮助您的设计更加贴合消费者需求。</p>
+        </div>
+
+        <!-- 服务项 5 -->
+        <div class="service-item">
+            <h2>5. 服装生产对接与咨询</h2>
+            <p>我们协助您与生产厂家进行对接，确保您的服装设计顺利进入生产阶段。同时，我们提供相关咨询服务，帮助您解决生产中的各类问题。</p>
+        </div>
+
+        <!-- 服务项 6 -->
+        <div class="service-item">
+            <h2>6. 服装版型数字化与批量化生产</h2>
+            <p>我们支持服装版型的数字化存档与批量化生产，帮助您提高生产效率、缩短生产周期。</p>
+        </div>
+
+        <!-- 服务项 7 -->
+        <div class="service-item">
+            <h2>7. 面料与辅料建议</h2>
+            <p>根据您的设计需求，我们为您推荐合适的面料与辅料，确保款式和质量的完美契合。</p>
+        </div>
+    </section>
     <br>
     <!--<div class="video-container" >
     <iframe src="https://Show.mp4"  frameborder="0" allowfullscreen></iframe>
