--- a/index.html
+++ b/index.html
@@ -72,27 +72,37 @@
     <div>
 		
 
-      <h1>2024年招聘服装论坛版主</h1>
-      <br>
-      职责与要求： 管理论坛内容，监督帖子和评论，确保内容质量和秩序。
-      积极参与讨论，提供有益的时尚、服装相关建议。
-      协助解答其他会员的问题，分享你的专业知识和见解。
-      与团队密切合作，共同维护良好的社区氛围。
-      具备良好的沟通和协调能力，能够妥善处理纠纷和争议。
-      具备一定的服装、时尚领域知识，有相关经验者优先考虑。 <br>
-      <ul>
-        福利：
-        获得丰富的时尚与服装领域知识，拓展你的个人兴趣爱好。
-        增强沟通与管理能力，提升团队协作技巧。
-        在论坛中建立影响力，结识志同道合的朋友。
-        有机会参与时尚活动、赛事，拓展人际关系。
-        长期优秀表现者有晋升机会。
-        如果你热爱时尚，善于与人沟通，愿意为论坛的繁荣发展贡献一份力量，欢迎发送你的简历至[邮箱地址]，并在邮件标题中注明“服装论坛版主申请”。
-      </ul>
-      <br>
-      <ul>
-        让我们一起，用热情与知识点亮时尚的舞台！期待你的加入！
-      </ul>
+         <!-- 首页横幅 -->
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1>欢迎来到XXX服装CAD制版工作室</h1>
+            <p>我们为服装行业提供精准、高效的CAD制版服务，助力品牌从设计到生产的每一步。</p>
+        </div>
+    </section>
+
+    <!-- 首页介绍 -->
+    <section class="intro">
+        <h2>关于我们</h2>
+        <p>在XXX服装CAD制版工作室，我们通过现代CAD制版技术和多年行业经验，帮助服装品牌实现高效精准的生产流程。我们专注于服装版型制作与优化，为您的品牌提供从设计到大货生产的全程支持。</p>
+        <p>我们致力于为客户提供一流的服务，通过先进的技术和个性化的解决方案，确保每一款服装都能完美呈现。</p>
+    </section>
+
+    <!-- 服务预览 -->
+    <section id="services" class="services">
+        <h2>我们的服务</h2>
+        <div class="service-card">
+            <h3>服装CAD制版服务</h3>
+            <p>为您的设计提供精确的数字化版型，确保合身舒适、款式精准。</p>
+        </div>
+        <div class="service-card">
+            <h3>样衣制作</h3>
+            <p>根据CAD版型制作样衣，确保穿着效果和设计理念的完美匹配。</p>
+        </div>
+        <div class="service-card">
+            <h3>服装技术包制作</h3>
+            <p>提供详细的技术包，确保生产环节的准确执行。</p>
+        </div>
+    </section>
       <br>
       <ul>
         联系方式 <br>
