--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          <!-- 首页横幅 -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>欢迎来到XXX服装CAD制版工作室</h1>
+            <h1>欢迎来到服装CAD制版工作室</h1>
             <p>我们为服装行业提供精准、高效的CAD制版服务，助力品牌从设计到生产的每一步。</p>
         </div>
     </section>
