--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- 首页介绍 -->
     <section class="intro">
         <h2>关于我们</h2>
-        <p>在XXX服装CAD制版工作室，我们通过现代CAD制版技术和多年行业经验，帮助服装品牌实现高效精准的生产流程。我们专注于服装版型制作与优化，为您的品牌提供从设计到大货生产的全程支持。</p>
+        <p>在服装CAD制版工作室，我们通过现代CAD制版技术和多年行业经验，帮助服装品牌实现高效精准的生产流程。我们专注于服装版型制作与优化，为您的品牌提供从设计到大货生产的全程支持。</p>
         <p>我们致力于为客户提供一流的服务，通过先进的技术和个性化的解决方案，确保每一款服装都能完美呈现。</p>
     </section>
 
