--- a/lianxi.html
+++ b/lianxi.html
@@ -68,11 +68,13 @@
 <div class="content">
   <div class="vogana01"> </div>
   <div class="vogana02">
-    <h1>联系我们</h1>
-    <p> <br>
-      QQ:184404154&nbsp;</p>
-    <p>邮箱：cctv92@126.com <br>
+    <section id="contact" class="contact">
+        <h1>联系我们</h1>
+        <p>有任何问题或合作需求，请随时联系我们，我们期待为您提供专业的服务！</p>
+	       <p>QQ:184404154</p>
+	        <p>邮箱：cctv92@126.com <br>
       地址：上海 * 宁波 * 杭州</p>
+    </section>
     <br>
     扫码加微信 <br>
     <div style=""> <img src="images/weixin.jpg" width="300" height="300" alt=""/> </div>
