--- a/lianxi.html
+++ b/lianxi.html
@@ -68,15 +68,18 @@
 <div class="content">
   <div class="vogana01"> </div>
   <div class="vogana02">
+
+    <!-- 联系我们 -->
     <section id="contact" class="contact">
         <h1>联系我们</h1>
-        <p>有任何问题或合作需求，请随时联系我们，我们期待为您提供专业的服务！</p>
-	       <p>QQ:184404154</p>
-	        <p>邮箱：cctv92@126.com <br>
-      地址：上海 * 宁波 * 杭州</p>
+        <p>如果您对我们的服务有任何疑问或合作需求，请通过以下方式与我们联系：</p>
+        <p>Email: <a href="https://www.annazi.cn/weixin">联系我</a></p>
+        <p>QQ:184404154</p>
+	<p>邮箱：cctv92@126.com</p>
+        <p>地址：上海 * 宁波 * 杭州</p>
+	<p>扫码加微信</p>
     </section>
-    <br>
-    扫码加微信 <br>
+	  
     <div style=""> <img src="images/weixin.jpg" width="300" height="300" alt=""/> </div>
     <br>
     <div class="gallery">
