--- a/fuwu.html
+++ b/fuwu.html
@@ -68,53 +68,26 @@
 <div class="content">
   <div class="vogana01"> </div>
   <div class="vogana02">
-        <section class="services-detail">
-        <h1>我们的服务</h1>
-        <p>我们为服装设计品牌提供全面的CAD制版和相关服务，确保每一件成品都符合市场需求并且完美呈现。</p>
-        
-        <!-- 服务项 1 -->
-        <div class="service-item">
-            <h2>1. 服装CAD制版服务</h2>
-            <p>我们通过数字化技术精确制作服装版型，确保每一款服装设计符合人体工程学、穿着舒适、合身度高，助力您打造出市场上最受欢迎的款式。</p>
+    <!-- 服务详细内容 -->
+    <section class="services-detail">
+        <h1>我们的专业服务</h1>
+        <p>我们致力于为服装设计品牌提供一站式的制版解决方案，确保每一件服装的版型精准、生产流程高效。以下是我们为您提供的具体服务：</p>
+
+        <!-- 服装CAD制版 -->
+        <div class="service-detail">
+            <h2>服装CAD制版</h2>
+            <p>通过现代CAD技术，我们将设计师的创意精准转化为服装版型，确保合身度、舒适性与美观度的完美结合。我们为各类服装提供定制化制版服务，满足不同款式、功能需求。</p>
+            <ul>
+                <li>男女装、童装、运动装等各类服装的专业制版。</li>
+                <li>支持多种面料与工艺，确保不同设计风格的实现。</li>
+                <li>高效、精准的版型输出，减少生产中出现的错误。</li>
+            </ul>
         </div>
 
-        <!-- 服务项 2 -->
-        <div class="service-item">
-            <h2>2. 服装样衣制作</h2>
-            <p>根据CAD制版文件，我们为您提供高质量的样衣制作服务，确保设计的版型与成衣效果一致。在样衣制作过程中，我们提供修改与优化服务，确保款式完美。</p>
-        </div>
-
-        <!-- 服务项 3 -->
-        <div class="service-item">
-            <h2>3. 服装技术包制作</h2>
-            <p>我们提供完整的服装技术包，包含面料、辅料、工艺要求等详细信息，为生产方提供准确指导，确保大货生产不出错。</p>
-        </div>
-
-        <!-- 服务项 4 -->
-        <div class="service-item">
-            <h2>4. 服装版型修改与调整</h2>
-            <p>根据市场反馈或客户需求，我们灵活地对服装版型进行调整与优化，帮助您的设计更加贴合消费者需求。</p>
-        </div>
-
-        <!-- 服务项 5 -->
-        <div class="service-item">
-            <h2>5. 服装生产对接与咨询</h2>
-            <p>我们协助您与生产厂家进行对接，确保您的服装设计顺利进入生产阶段。同时，我们提供相关咨询服务，帮助您解决生产中的各类问题。</p>
-        </div>
-
-        <!-- 服务项 6 -->
-        <div class="service-item">
-            <h2>6. 服装版型数字化与批量化生产</h2>
-            <p>我们支持服装版型的数字化存档与批量化生产，帮助您提高生产效率、缩短生产周期。</p>
-        </div>
-
-        <!-- 服务项 7 -->
-        <div class="service-item">
-            <h2>7. 面料与辅料建议</h2>
-            <p>根据您的设计需求，我们为您推荐合适的面料与辅料，确保款式和质量的完美契合。</p>
-        </div>
-    </section>
-    <br>
+        <!-- 样衣制作与调整 -->
+        <div class="service-detail">
+            <h2>样衣制作与调整</h2>
+            <p>根据CAD制版文件制作样衣，并通过试穿与调整，确保版型与设计效果的
     <!--<div class="video-container" >
     <iframe src="https://Show.mp4"  frameborder="0" allowfullscreen></iframe>
     </div>--> 
