--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- 内容样式 */ -->
 <div class="content">
   <div class="vogana01"> </div>
-  <div class="vogana02">
+  <div class="vogana02"></div>
 		
     <!-- 首页横幅 -->
     <section id="home" class="hero">
@@ -134,7 +134,7 @@
     </section>
 	  
 	  
-</div>
+
 <!-- 隐藏面板 */ -->
 <div id="panel" style="display: none;">
   <div>
