--- a/fuwu.html
+++ b/fuwu.html
@@ -87,8 +87,36 @@
         <!-- 样衣制作与调整 -->
         <div class="service-detail">
             <h2>样衣制作与调整</h2>
-            <p>根据CAD制版文件制作样衣，并通过试穿与调整，确保版型与设计效果的
+            <p>根据CAD制版文件制作样衣，并通过试穿与调整，确保版型与设计效果的完美呈现。我们提供从样衣制作到修改调整的全程服务，以确保最终产品符合设计要求。</p>
+            <ul>
+                <li>根据CAD制版文件精确制作样衣，确保与设计一致。</li>
+                <li>进行多次试穿调整，以优化服装的合身度与舒适性。</li>
+                <li>提供专业的版型与剪裁调整建议，帮助品牌打造高质量的成品。</li>
+            </ul>
         </div>
+
+        <!-- 生产对接与监控 -->
+        <div class="service-detail">
+            <h2>生产对接与监控</h2>
+            <p>我们帮助客户与生产厂商进行无缝对接，确保生产过程中的质量控制和进度管理，以达到最佳的生产效率。</p>
+            <ul>
+                <li>协调设计与生产，确保产品按时按质完成。</li>
+                <li>全程监控生产环节，确保每个细节符合要求。</li>
+                <li>提供生产过程中的质量反馈，及时调整，避免大规模生产中的问题。</li>
+            </ul>
+        </div>
+
+        <!-- 设计咨询与支持 -->
+        <div class="service-detail">
+            <h2>设计咨询与支持</h2>
+            <p>除了提供制版服务，我们还提供专业的设计咨询，帮助客户在设计阶段优化版型、选择面料和款式。</p>
+            <ul>
+                <li>为客户提供创意与设计方向建议，帮助提升品牌的市场竞争力。</li>
+                <li>根据目标市场需求提供面料和款式选择建议。</li>
+                <li>协助调整设计，使其更符合生产与穿着要求。</li>
+            </ul>
+        </div>
+    </section>
     <!--<div class="video-container" >
     <iframe src="https://Show.mp4"  frameborder="0" allowfullscreen></iframe>
     </div>--> 
