--- a/index.html
+++ b/index.html
@@ -70,62 +70,62 @@
   <div class="vogana01"> </div>
   <div class="vogana02">		
     <!-- 首页横幅 -->
-    <section id="home" class="hero">
-        <div class="hero-content">
+    <section>
+        <div>
             <h1>专业的服装CAD制版服务，成就您的设计梦想</h1>
             <p>通过先进的技术与经验丰富的团队，提供精准高效的服装制版服务，助力品牌设计和生产无缝对接。</p>
         </div>
     </section>
 
     <!-- 关于我们 -->
-    <section id="about" class="about">
+    <section>
         <h2>关于服装CAD制版工作室</h2>
         <p>服装CAD制版工作室专注于为服装设计品牌提供全方位的CAD制版服务。我们结合现代设计工具与多年行业经验，致力于为客户提供高效、精准且符合市场需求的服装制版服务。我们的工作室凭借强大的技术背景与创意支持，成为众多品牌的首选合作伙伴。</p>
         <p>我们不仅帮助您从设计到样衣制作，同时也为大货生产提供技术支持。我们坚信，精准的服装版型是品牌成功的基石，因此每一项服务我们都力求完美。</p>
     </section>
 
     <!-- 服务内容 -->
-    <section id="services" class="services">
+    <section>
         <h2>我们的服务</h2>
         <p>我们为各类服装品牌提供从设计到生产的全流程解决方案，确保每一步都高效精准，帮助您实现从创意到成品的无缝对接。</p>
 
         <!-- 服务 1 -->
-        <div class="service-item">
+        <div>
             <h3>服装CAD制版</h3>
             <p>通过先进的CAD制版技术，我们将您的设计理念转化为精准的服装版型，确保每一款服装都符合人体工程学、穿着舒适且符合市场需求。</p>
             <p><strong>服务内容：</strong>为男女装、童装、运动服、内衣等各类服装提供专业制版服务，支持不同材质、款式和功能的服装需求。</p>
         </div>
 
         <!-- 服务 2 -->
-        <div class="service-item">
+        <div>
             <h3>样衣制作与调整</h3>
             <p>根据CAD制版文件，我们为您制作样衣，并通过试穿与调整优化，确保设计效果与版型的完美结合。</p>
             <p><strong>服务内容：</strong>提供多次修改与试穿反馈，优化版型，确保最终样衣符合设计师要求及市场反馈。</p>
         </div>
 
         <!-- 服务 3 -->
-        <div class="service-item">
+        <div>
             <h3>服装技术包制作</h3>
             <p>为了确保生产环节的精准执行，我们为每一款服装设计制作详尽的技术包，确保生产厂商能够准确理解设计要求，避免生产中的错误。</p>
             <p><strong>服务内容：</strong>包括面料、辅料、工艺说明、尺寸规格、工艺流程等详细资料。</p>
         </div>
 
         <!-- 服务 4 -->
-        <div class="service-item">
+        <div>
             <h3>服装版型优化与修改</h3>
             <p>根据市场反馈或客户需求，我们为您提供版型优化和修改服务，确保产品的合身度和舒适性。</p>
             <p><strong>服务内容：</strong>我们提供灵活的版型修改方案，包括款式调整、尺码调整以及符合不同身型的优化。</p>
         </div>
 
         <!-- 服务 5 -->
-        <div class="service-item">
+        <div>
             <h3>生产对接与咨询</h3>
             <p>我们协助客户与生产厂商进行对接，确保服装设计顺利进入生产环节，并提供全面的生产咨询与问题解决方案。</p>
             <p><strong>服务内容：</strong>从面料采购到生产流程管理，我们提供全方位的支持，确保生产按计划顺利进行。</p>
         </div>
 
         <!-- 服务 6 -->
-        <div class="service-item">
+        <div>
             <h3>批量生产支持与质量监控</h3>
             <p>我们帮助客户进行服装批量生产的版型监控与质量检测，确保大货生产的品质与样衣一致。</p>
             <p><strong>服务内容：</strong>提供全程生产支持，包括生产过程中的质量控制和尺寸监控，确保每一批货品的质量稳定。</p>
