--- a/index.html
+++ b/index.html
@@ -79,16 +79,19 @@
 
     <!-- 关于我们 -->
     <section>
+	<div>
         <h2>关于服装CAD制版工作室</h2>
         <p>服装CAD制版工作室专注于为服装设计品牌提供全方位的CAD制版服务。我们结合现代设计工具与多年行业经验，致力于为客户提供高效、精准且符合市场需求的服装制版服务。我们的工作室凭借强大的技术背景与创意支持，成为众多品牌的首选合作伙伴。</p>
         <p>我们不仅帮助您从设计到样衣制作，同时也为大货生产提供技术支持。我们坚信，精准的服装版型是品牌成功的基石，因此每一项服务我们都力求完美。</p>
+	</div>	
     </section>
 
     <!-- 服务内容 -->
     <section>
+	<div>    
         <h2>我们的服务</h2>
         <p>我们为各类服装品牌提供从设计到生产的全流程解决方案，确保每一步都高效精准，帮助您实现从创意到成品的无缝对接。</p>
-
+        </div>
         <!-- 服务 1 -->
         <div>
             <h3>服装CAD制版</h3>
