--- a/fuwu.html
+++ b/fuwu.html
@@ -69,12 +69,12 @@
   <div class="vogana01"> </div>
   <div class="vogana02">
     <!-- 服务详细内容 -->
-    <section class="services-detail">
+    <section>
         <h1>我们的专业服务</h1>
         <p>我们致力于为服装设计品牌提供一站式的制版解决方案，确保每一件服装的版型精准、生产流程高效。以下是我们为您提供的具体服务：</p>
 
         <!-- 服装CAD制版 -->
-        <div class="service-detail">
+        <div>
             <h2>服装CAD制版</h2>
             <p>通过现代CAD技术，我们将设计师的创意精准转化为服装版型，确保合身度、舒适性与美观度的完美结合。我们为各类服装提供定制化制版服务，满足不同款式、功能需求。</p>
             <ul>
@@ -85,7 +85,7 @@
         </div>
 
         <!-- 样衣制作与调整 -->
-        <div class="service-detail">
+        <div>
             <h2>样衣制作与调整</h2>
             <p>根据CAD制版文件制作样衣，并通过试穿与调整，确保版型与设计效果的完美呈现。我们提供从样衣制作到修改调整的全程服务，以确保最终产品符合设计要求。</p>
             <ul>
@@ -96,7 +96,7 @@
         </div>
 
         <!-- 生产对接与监控 -->
-        <div class="service-detail">
+        <div>
             <h2>生产对接与监控</h2>
             <p>我们帮助客户与生产厂商进行无缝对接，确保生产过程中的质量控制和进度管理，以达到最佳的生产效率。</p>
             <ul>
@@ -107,7 +107,7 @@
         </div>
 
         <!-- 设计咨询与支持 -->
-        <div class="service-detail">
+        <div>
             <h2>设计咨询与支持</h2>
             <p>除了提供制版服务，我们还提供专业的设计咨询，帮助客户在设计阶段优化版型、选择面料和款式。</p>
             <ul>
