--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 </div>
 
 <!-- 服务内容 -->
-<div id="services">
-    <h2>我们的服务</h2>
-    <p>我们为各类服装品牌提供从设计到生产的全流程解决方案，确保每一步都高效精准，帮助您实现从创意到成品的无缝对接。</p>
-    
+    <div class="service" id="cad-pattern">
+        <h2>我们的服务</h2>
+        <p>我们为各类服装品牌提供从设计到生产的全流程解决方案，确保每一步都高效精准，帮助您实现从创意到成品的无缝对接。</p>
+    </div>
     <!-- 服务 1 -->
     <div class="service" id="cad-pattern">
         <h3>服装CAD制版</h3>
@@ -130,7 +130,6 @@
         <p>我们帮助客户进行服装批量生产的版型监控与质量检测，确保大货生产的品质与样衣一致。</p>
         <p><strong>服务内容：</strong>提供全程生产支持，包括生产过程中的质量控制和尺寸监控，确保每一批货品的质量稳定。</p>
     </div>
-</div>
 
 
 	  
