--- a/fuwu.html
+++ b/fuwu.html
@@ -69,10 +69,10 @@
   <div class="vogana01"> </div>
   <div class="vogana02">
     <!-- 服务详细内容 -->
-    <section>
+<div>
         <h1>我们的专业服务</h1>
         <p>我们致力于为服装设计品牌提供一站式的制版解决方案，确保每一件服装的版型精准、生产流程高效。以下是我们为您提供的具体服务：</p>
-
+ </div>
         <!-- 服装CAD制版 -->
         <div>
             <h2>服装CAD制版</h2>
@@ -116,7 +116,7 @@
                 <li>协助调整设计，使其更符合生产与穿着要求。</li>
             </ul>
         </div>
-    </section>
+
     <!--<div class="video-container" >
     <iframe src="https://Show.mp4"  frameborder="0" allowfullscreen></iframe>
     </div>--> 
