--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </div>
 
 <!-- 服务内容 -->
-    <div class="service">
+    <div id="service">
         <h2>我们的服务</h2>
         <p>我们为各类服装品牌提供从设计到生产的全流程解决方案，确保每一步都高效精准，帮助您实现从创意到成品的无缝对接。</p>
     </div>
