--- a/lianxi.html
+++ b/lianxi.html
@@ -73,9 +73,8 @@
     <div class="service">
         <h3>联系我们</h3>
         <p>如果您对我们的服务有任何疑问或合作需求，请通过以下方式与我们联系：</p>
-        <p>Email: <a href="https://www.annazi.cn/weixin">联系我</a></p>
+        <p>Email: <a href="https://www.annazi.cn/weixin">cctv92@126.com</a></p>
         <p>QQ:184404154</p>
-	<p>邮箱：cctv92@126.com</p>
         <p>地址：上海 * 宁波 * 杭州</p>
 	<p>扫码加微信</p>
 	<div style=""> <img src="images/weixin.jpg" width="300" height="300" alt=""/> </div>   
