--- a/fuwu.html
+++ b/fuwu.html
@@ -69,7 +69,7 @@
   <div class="vogana01"> </div>
   <div class="vogana02">
     <!-- 服务详细内容 -->
-<div id="about-us">
+<div id="banner">
         <h1>我们的专业服务</h1>
         <p>我们致力于为服装设计品牌提供一站式的制版解决方案，确保每一件服装的版型精准、生产流程高效。以下是我们为您提供的具体服务：</p>
  </div>
