--- a/lianxi.html
+++ b/lianxi.html
@@ -74,7 +74,7 @@
         <h3>联系我们</h3>
         <p>如果您对我们的服务有任何疑问或合作需求，请通过以下方式与我们联系：</p>
         <p>Email: <a href="https://www.annazi.cn/weixin">cctv92@126.com</a></p>
-	<p>企业网站: <a href="https://www.annazi.cn/weixin">annazi.cn</a></p>
+	<p>企业网站: <a href="https://www.annazi.cn">annazi.cn</a></p>
         <p>QQ:184404154</p>
         <p>服务城市：北京 * 上海 * 宁波 * 杭州</p>
 	<p>扫码加微信</p>
