--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="annazi-gh"> <h2>承接3D设计建模，制版，样衣，大货生产服务</h2>  </div><div></div>
     
   </div>
-  <div class="image-wrapper" style="background-image: url('buju/images/c23d.webp');"> <!-- 添加包裹图片的div -->
+  <div class="image-wrapper" style="background-image: url('images/annazi21.webp');"> <!-- 添加包裹图片的div -->
     <img src="buju/images/annazi23.webp" alt="Slide 1" style="opacity:1;">
   </div>
   
