--- a/lianxi.html
+++ b/lianxi.html
@@ -2,6 +2,10 @@
 <html lang="zh">
 <head>
 <!-- 页面内容由 JS 动态插入 -->
+  <link rel="stylesheet" href="css/styles.css?v=2">
+  <link rel="stylesheet" href="css/styless.css?v=2">
+  <link rel="stylesheet" href="css/stylesb.css?v=2">
+  <link rel="stylesheet" href="css/styles-h.css?v=2">	
 </head>
 <body>
 <!-- 导航部分 -->
