--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 </div>
 <!-- JavaScript 调用 -->
 <button id="toggleBtn"><img src="images/c02.svg" alt="<"></button>
-<button id="backToTopBtn">∧</button>
+<button id="backToTopBtn"><img src="images/dingbu.svg" alt="顶部" width="40" height="40"></button>
 <script src="js/script.js?v=2"></script> 
 <script src="js/scriptt.js?v=2"></script> 
 <script src="js/scriptb.js?v=2"></script> 
