--- a/lianxi.html
+++ b/lianxi.html
@@ -44,7 +44,7 @@
 </div>
 <!-- 隐藏面板 */ -->
 <!-- JavaScript 调用 -->
-<button id="backToTopBtn">∧</button>
+<button id="backToTopBtn"><img src="images/dingbu.svg" alt="顶部" width="40" height="40"></button>
 <script src="js/script.js?v=1"></script> 
 <script src="js/scriptt.js?v=1"></script> 
 <script src="js/scriptb.js?v=1"></script> 
