--- a/404.html
+++ b/404.html
@@ -85,7 +85,7 @@
 <!-- 内容样式 */ -->		  
   </div>	
 <!-- JavaScript 调用 -->
-<button id="backToTopBtn">∧</button>
+<button id="backToTopBtn"><img src="images/dingbu.svg" alt="顶部" width="40" height="40"></button>
 <script src="js/script.js"></script> 
 <script src="js/scriptt.js"></script> 
 <script src="js/scriptb.js"></script> 
