--- a/fuwu.html
+++ b/fuwu.html
@@ -117,7 +117,17 @@
                 <li>协助调整设计，使其更符合生产与穿着要求。</li>
             </ul>
         </div>
-
+    <div class="gallery">
+      <div class="image"><img src="images/wiu/1001.jpg" alt="Image 1"></div>
+      <div class="image"><img src="images/wiu/1002.jpg" alt="Image 2"></div>
+      <div class="image"><img src="images/wiu/1003.jpg" alt="Image 3"></div>
+      <div class="image"><img src="images/wiu/1004.jpg" alt="Image 1"></div>
+      <div class="image"><img src="images/wiu/1005.jpg" alt="Image 2"></div>
+      <div class="image"><img src="images/wiu/1006.jpg" alt="Image 3"></div>
+    </div>
+    <br>
+	<br>
+	<br>
     <!--<div class="video-container" >
     <iframe src="https://Show.mp4"  frameborder="0" allowfullscreen></iframe>
     </div>--> 
