--- a/404.html
+++ b/404.html
@@ -7,18 +7,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <link rel="icon" type="image/png" href="images/favicon.png">
 <meta name="description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！www.foooz.link ">
-<meta name="keywords" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link ">
+<meta name="keywords" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,pca.us.kg ">
 <meta name="author" content="服装制版">
 <meta name="robots" content="index, follow">
-<meta property="og:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link">
+<meta property="og:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,pca.us.kg">
 <meta property="og:description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！">
-<meta property="og:image" content="https://www.foooz.link/images/favicon.png">
-<meta property="og:url" content="https://www.foooz.link/">
+<meta property="og:image" content="https://pca.us.kg/images/favicon.png">
+<meta property="og:url" content="https://pca.us.kg/">
 <meta property="og:type" content="article">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,www.foooz.link">
+<meta name="twitter:title" content="服装制版,裤子制版,西装制版,大衣制版,风衣制版,服装技术,CAD制版,服装3D,服装打样,样衣打样,服装工艺,服装版师,服装设计师,服装导航,服装产品,服装交互设计师,pca.us.kg">
 <meta name="twitter:description" content="欢迎来到我们的服装制版世界！探索着数字化时尚的无限可能，从CAD服装设计到智能制版，再到材料创新，我们为您呈现一场前沿的时尚科技盛宴。深入了解服装制版工艺，从模式分级到纸样调整，从制版软件比较到制版误差分析，我们为您提供了全方位、多角度的解析，助您掌握服装制版的核心精髓。我们将探讨数字化制版对生产效率和可持续时尚的深远影响，带您领略时尚与技术的完美交融。加入我们，参与智能时尚科技的革命，掌握未来服装技术创新的领先地位，引领时尚制版的全新时代。让我们共同塑造一个更加精彩的时尚明天！www.foooz.link ">
-<meta name="twitter:image" content="https://www.foooz.link/images/favicon.png">
+<meta name="twitter:image" content="https://pca.us.kg/images/favicon.png">
 <meta name="googlebot" content="noindex">
 <meta name="googlebot-news" content="nosnippet">
 <meta name="geo.placename" content="浙江、宁波">
