--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <!-- 海报 -->
 <div class="carousel" id="carousel">
   <div class="carousel-content" style="display:block;">
-    <div class="annazi-gh"> <h2>承接3D设计建模</h2>  </div><div></div>
+    <div class="annazi-gh"> <h2>承接3D建模</h2>  </div><div></div>
     
   </div>
   <div class="image-wrapper" style="background-image: url('images/c23d.webp');"> <!-- 添加包裹图片的div -->
